--- a/README.rdoc
+++ b/README.rdoc
@@ -1,6 +1,6 @@
 = Sexpistol
 
-Sexpistol is a simple library for parsing S-Expressions in Ruby. Sexpistol takes an S-Expression and turns it into a native Ruby data structure made up of nested sets of arrays.
+Sexpistol is a very fast and easy-to-use library for parsing S-Expressions in Ruby. Sexpistol takes an S-Expression in string form and turns it into a native Ruby data structure made up of nested sets of arrays.
 
 === Example
 
@@ -66,8 +66,15 @@ For convenience Sexpistol is packaged as a RubyGem, to install it simply enter t
   @parser.to_sexp( ast )
   #=> "( string ( is ( parsed ) ) )"
   
+=== Performance
+
+The core of Sexpistol was recently re-written using StringScanner and the new version is roughly twice as fast as the older ones.
+
+Parsing throughput on my test machine (2Ghz Core 2 Duo, 4GB RAM, Ruby 1.9) is roughly 1.6 Megabytes/sec. Benchmarking Sexpistol against other popular S-Expression parser gems shows that it is roughly 7-8x faster than the nearest competitor.
+
 === Author & Credits
 
 Author:: {Aaron Gough}[mailto:aaron@aarongough.com]
+Contributors:: {Shane Hanna}[http://github.com/shanna]
 
 Copyright (c) 2010 {Aaron Gough}[http://thingsaaronmade.com/] ({thingsaaronmade.com}[http://thingsaaronmade.com/]), released under the MIT license
