--- a/README.rdoc
+++ b/README.rdoc
@@ -70,7 +70,7 @@ For convenience Sexpistol is packaged as a RubyGem, to install it simply enter t
 
 The core of Sexpistol was recently re-written using StringScanner and the new version is roughly twice as fast as the older ones.
 
-Parsing throughput on my test machine (2Ghz Core 2 Duo, 4GB RAM, Ruby 1.9) is roughly 1.6 Megabytes/sec. Benchmarking Sexpistol against other popular S-Expression parser gems shows that it is roughly 7-8x faster than the nearest competitor.
+Parsing throughput on my test machine (2Ghz Core 2 Duo, 4GB RAM, Ruby 1.9) is roughly 1.6 Megabytes/sec. This is fairly high given that Sexpistol is pure Ruby. Benchmarking Sexpistol against other popular S-Expression parser gems shows that it is roughly 7-8x faster than the nearest competitor.
 
 === Author & Credits
 
