--- a/README.rdoc
+++ b/README.rdoc
@@ -42,6 +42,15 @@ Sexpistol also supports mapping the Ruby keyword literals (nil, true, false) to 
   @parser.parse_string("nil false true")
   #=> [nil, false, true]
   
+== Scheme compatibility
+
+Above all Sexpistol strives to be compatible with Scheme-style S-Expressions. This means that Sexpistol supports comma quoting, though quasi-quoting is not yet implemented. Sexpistol can also generate Scheme compatible external representations when the 'scheme_compatability' options is set to true:
+
+  @parser = Sexpistol.new
+  @parser.scheme_compatability = true
+  @parser.to_sexp([:test, false, true, nil])
+  #=> "(test #f #t ())"
+  
 === Installation
 
 For convenience Sexpistol is packaged as a RubyGem, to install it simply enter the following at your command line:
@@ -70,7 +79,7 @@ For convenience Sexpistol is packaged as a RubyGem, to install it simply enter t
 
 The core of Sexpistol was recently re-written using StringScanner and the new version is roughly twice as fast as the older ones.
 
-Parsing throughput on my test machine (2Ghz Core 2 Duo, 4GB RAM, Ruby 1.9) is roughly 1.6 Megabytes/sec. This is fairly high given that Sexpistol is pure Ruby. Benchmarking Sexpistol against other popular S-Expression parser gems shows that it is roughly 7-8x faster than the nearest competitor.
+Parsing throughput on my test machine (2Ghz Core 2 Duo, 4GB RAM, Ruby 1.9) is approximately 1 Megabytes/sec. This is fairly high given that Sexpistol is pure Ruby. Benchmarking Sexpistol against other popular S-Expression parser gems shows that it is roughly 8x faster than the nearest competitor.
 
 === Author & Credits
 
